bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:1: error: identifier expected but integer literal found.
def nearHundred(88): Boolean = {
                ^NearHundred:7: error: ':' expected but '}' found.
}
^