bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(88): Boolean = {
  if (10<=n<=100) {
    return true
  }
}